--- a/colibre/auto_plotter/depletion_relations.yml
+++ b/colibre/auto_plotter/depletion_relations.yml
@@ -1,9 +1,9 @@
 oxygen_abundance_v_dust_to_gas:
   type: "scatter"
   legend_loc: "lower right"
-  selection_mask: "derived_quantities.valid_abundances"
+  selection_mask: "derived_quantities.dust_valid_abundances_100_kpc"
   x:
-    quantity: "derived_quantities.gas_o_abundance"
+    quantity: "derived_quantities.gas_o_abundance_100_kpc"
     units: "dimensionless"
     start: 6.8
     end: 9.2
